Moved the quiz selection file up to be within the Quiz folder but outside the components. Fixed the overflow bug in the new quiz selection page.

--- a/src/global.css
+++ b/src/global.css
@@ -8,7 +8,7 @@ html, body {
 }
 
 body{
-  /* height: 100%; */
+  overflow: hidden;
   background-size: cover; 
   background-position: center; 
   background-repeat: no-repeat; 
